@@ -2,32 +2,44 @@ package com.occucode.ubti.service;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.occucode.ubti.dto.*;
+import com.occucode.ubti.dto.MbtiQuestionResponseDto;
+import com.occucode.ubti.dto.MbtiQuestionSubmitFriendRequestDto;
+import com.occucode.ubti.dto.MbtiQuestionSubmitResponseDto;
+import com.occucode.ubti.dto.MbtiQuestionSubmitSelfRequestDto;
 import com.occucode.ubti.entity.*;
 import com.occucode.ubti.enums.MbtiEnum;
-import com.occucode.ubti.repository.*;
+import com.occucode.ubti.repository.MbtiResultRepository;
+import com.occucode.ubti.repository.OtherMbtiLogRepository;
+import com.occucode.ubti.repository.SelfMbtiLogRepository;
+import com.occucode.ubti.repository.UserRepository;
+import com.querydsl.jpa.impl.JPAQueryFactory;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 @Service
 @RequiredArgsConstructor
 public class MbtiServiceImpl implements MbtiService {
-  private final MbtiQuestionRepository mbtiQuestionRepository;
   private final MbtiResultRepository mbtiResultRepository;
   private final UserRepository userRepository;
   private final SelfMbtiLogRepository selfMbtiLogRepository;
   private final OtherMbtiLogRepository otherMbtiLogRepository;
+  private final JPAQueryFactory jpaQueryFactory;
 
   @Transactional(readOnly = true)
   public List<MbtiQuestionResponseDto> getMbtiQuestList() {
-    return mbtiQuestionRepository.findAllWithAnswer()
+    QMbtiQuestion mbtiQuestion = QMbtiQuestion.mbtiQuestion;
+
+    return jpaQueryFactory
+      .selectFrom(mbtiQuestion)
+      .leftJoin(mbtiQuestion.mbtiAnswerItemList).fetchJoin()
+      .fetch()
       .stream()
-      .map(MbtiQuestionResponseDto::toDto).collect(toList());
+      .map(MbtiQuestionResponseDto::toDto)
+      .toList();
+
   }
 
   @Transactional
